# DocLlama

backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  health.py  ingest.py  models.py  search.py  types.py
backend/app/core/: chunking.py  ollama.py  settings.py
backend/app/db/: chroma.py
